Fix various z-index order bugs for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,24 +108,21 @@ img.resource {padding: 2px; box-shadow: 4px 4px 25px #aaa; margin-bottom: 10px;}
 /* Mobile styles; see: https://www.paintcodeapp.com/news/ultimate-guide-to-iphone-resolutions */
 #nav-mobile {display: none;}
 @media only screen and (min-width: 320px) and (max-width: 768px) {
-	
-	#nav-mobile {display: block; cursor: pointer; position: absolute; z-index: 1999; top: 10px; left: 5px; background: white url('/images/hamburger.svg') no-repeat center center; opacity: 0.9; height: 10px; width: 10px; padding: 17px; border-radius: 16px; box-shadow: 5px 5px 5px #aaa;}
+	#nav-mobile {display: block; cursor: pointer; position: absolute; z-index: 999; top: 10px; left: 5px; background: white url('/images/hamburger.svg') no-repeat center center; opacity: 0.9; height: 10px; width: 10px; padding: 17px; border-radius: 16px; box-shadow: 5px 5px 5px #aaa;}
 	nav {display: none;}	/* Default, toggled in JS */
-	nav {width: 90%; z-index: 1002;}
-	
+	nav {width: 90%; z-index: 999;}
 	#logo, #comparebox, p.export, .summary, .ui-tooltip {display: none;}
 	.leaflet-control-fullscreen, .leaflet-control-zoom {display: none;}
 	.leaflet-control-locate {position: fixed; top: 60px;}
+	.leaflet-top.leaflet-left, .leaflet-bottom.leaflet-left {z-index: 500;}
 	.geocoder {top: 14px; left: 65px; right: 25px;}
 	.geocoder input {width: 100%;}
 	input[name="location"] {font-size: 11px;}
 	#nav0 label {font-size: 74%;}
 	#nav0 ul.rangelabels li {font-size: 65%;}
 	#nav0 label {width: 85%;}
-	
 	.activearea {right: 0;}
 	.leaflet-control-layers, .leaflet-control-attribution, .summary {right: 0;}
-	
 	.map .leaflet-popup {min-width: 200px; max-width: 90%; background-color: red;}
 	table#chart td:first-child {width: auto;}
 	
