--- a/style/fixes.css
+++ b/style/fixes.css
@@ -11,7 +11,7 @@
 #content .campl-column12 .campl-content-container table {border-bottom: 0; margin-bottom: 1.5em;}
 
 /* Ensure navigation always appears above content, e.g. maps */
-.js .campl-local-navigation {z-index: 9999;}
+.js .campl-local-navigation {z-index: 1000;}
 
 /* Textarea widgets are set to be very small by default */
 input,textarea {width: auto;}
